# telechecker

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
telechecker_cli/: Cargo.toml  README.md
telechecker_cli/src/: main.rs
telechecker_gui/: Cargo.toml  README.md
telechecker_gui/src/: app.rs  client.rs  comms.rs  main.rs  ui.rs
telechecker_lib/: Cargo.toml
telechecker_lib/src/: lib.rs
telechecker_lib/src/user/: emoji_status.rs  mod.rs  restriction_reason.rs  user_profile_photo.rs  user_status.rs  username.rs
