[package]
name = "telechecker_cli"
version.workspace = true
edition.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# crate-specific
telechecker_lib = { path = "../telechecker_lib", version = "*" }
clap = { version = "4.5.4", features = ["derive"] }
phonenumber = "0.3.3"
rpassword = "7.3.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "fmt",
] }
