[package]
name = "telechecker_gui"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phonenumber = { workspace = true }

# crate-specific
telechecker_lib = { path = "../telechecker_lib", version = "*" }
eframe = "0.27.2"
egui = "0.27.2"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "registry"] }
strum = { version = "0.26.2", features = ["derive"] }
